# xyz2swc

./: Dockerfile  LICENSE  README.md  app.py  docker-compose.yml  requirements.txt  spec.md
clients/python/: README.md  pyproject.toml  xyz2swcapi.py
clients/python/tests/: test_xyz2swc_api.py
examples/: apiexample.py
input/swc_check_only/: NonStandard.swc
input/to_convert/: 5-HT1B-F-000000.am  neuron_AmriaMesh_AM.am  neuron_Eutectics.nts  neuron_Genesis.p  neuron_Imaris_IMS.ims  neuron_Knossos_NML.nml  neuron_NEURON_HOC.hoc  neuron_NINDS3D.anat  neuron_Neurolucida_ASC.asc  neuron_Neurolucida_NRX.nrx  neuron_Neurolucida_XML.xml  neuron_NeuronJ_NDF.ndf  neuron_PSICS.xml  neuron_PyKnossos_NMX.nmx  neuron_SNT.traces  neuron_TreesToolBox_MAT.mat  neuron_TreesToolBox_MTR.mtr  neuron_VTK.vtk  neuron_VTK1.vtk  neuron_mesh.stl
modules/am/: am2swc.r
modules/hbp/: package-lock.json
modules/mtr/: anyisfield.m  extractAfter.m  extractBefore.m  ismissing.m  mtr2swc  mtr2swc.m  run_mtr2swc.sh  swc_standardize.m
modules/ndf/: ndf2swc  ndf2swc.m  ndf_main.m  run_ndf2swc.sh  startsWith.m  swc_connect.m  swc_correct.m  swc_standardize.m
modules/neuronland/: GenerateBuildFiles_gmake2.sh
modules/snt/: snt2swc.py
ui/: index.html
ui/js/: main.js
xyz2swc/: apimodel.py  convert.py  standard.py  standardization.md  supported_formats.md
xyz2swc/swcch/: datatype_check.py  general_check.py  index_check.py  parentindex_check.py  soma_check.py  spiderleg_check.py  typeid_check.py
xyz2swc/swcco/: break_loop.py  contour_convert.py  correct_invalid_xyz.py  cut_spiderlegs.py  (+7 more)
(+330 files in other folders)
