[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "xyz2swcapi"
version = "0.1.0"
description = ""
authors = ["Your Name <youremail@example.com>"]


[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.31.0"
urllib3 = "1.26.5"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
bumpver = "^2023.1125"



[tool.bumpver]
current_version = "0.1.7"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message  = "Bump version {old_version} -> {new_version}"
commit          = true
tag             = true
push            = false

[tool.bumpver.file_patterns]
"pyproject.toml" = ['current_version = "{version}"', 'version = "{version}"']
"src/microjson/__init__.py" = ["{version}"]